--- a/package.json
+++ b/package.json
@@ -26,9 +26,7 @@
     "pinia": "^2.3.1",
     "typescript": "^5.6.2",
     "vue": "^3.5.13",
-    "vue-multiselect": "^3.2.0",
-    "vue-toastification": "^1.7.14",
-    "vue3-popper": "^1.5.0"
+    "vue-multiselect": "^3.2.0"
   },
   "devDependencies": {
     "@unocss/reset": "^0.63.1",
